fixed image spacing and captions

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -49,6 +49,10 @@
     .gallery-image img {
         width: 100%;
     }
+
+    .gallery-image p {
+        width: 100%;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -64,14 +68,15 @@
     #name {
         float: left;
         padding: 2%;
-        width: 40%;
-        margin: 0 0 0 1em;
+        width: 33%;
+        height: 100%;
+        margin: -.25em -1em 0 1em;
     }
 /* Navigation */
     nav {
-        float: left;
-        margin: .5em 0 -1.5em 5em;
-    } 
+        float: right;
+        margin: .5em 0 -2em 0;
+    }
 
     nav li {
         float: left;
@@ -96,13 +101,18 @@
 
     .gallery-image {
         float: left;
+        padding: .5em;
         width: 50%;
-        padding: 1em;
     }
 
-    .gallery-image img {
-        width: 100%;
+    .gallery img {
+        width: 50%;
     }
+
+    .gallery-image p {
+        width: 95%;
+    }
+
 }
 
 
@@ -123,9 +133,9 @@
 
 /* Navigation */
     nav {
-        float: right;
+       float: right;
        text-align: center;
-       margin: .5em 0 -1.45em -2em;
+       margin: .5em 0 -1.5em -2em;
     } 
 
 /* Layout Styles */
@@ -164,16 +174,21 @@
     .gallery-image img {
         width: 100%;
     }
+
+    .gallery-image p {
+        width: 100%;
+
+    }
 }
 
 @media screen and (min-width: 1400px) {
 /* Header */
-#name {
-    float: left;
-    padding: .5em;
-    width: 18%;
-    margin: 0 0 0 2em;
-}
+    #name {
+        float: left;
+        padding: .5em;
+        width: 18%;
+        margin: 0 0 0 2em;
+    }
 
 /* Layout Styles */
     #info-box {
@@ -205,6 +220,8 @@
 
     .gallery-image {
         float: left;
+        margin: 0;
+        padding: .5em;
         width: 50%;
     }
 
@@ -213,9 +230,9 @@
     }
 
     .gallery-image p {
-        width: 100%;
+        width: 95%;
 
-}
+    }
 
 
 
